linkedfiles suppress dialog

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -171,7 +171,7 @@
                 [role]="pieceDetailsService.pieceAsRole()" 
                 *ngIf="pieceDetailsService.pieceIsRole()">
             </app-discussions>
-            <app-linked-files
+            <app-linked-files class="container-sider-elements-element"
                 [scenario]="scenario"
                 [piece]="pieceDetailsService.pieceAsTask()"
                 *ngIf="pieceDetailsService.pieceIsTask()">
