--- a/src/app/components/tutorial/tutorial.component.html
+++ b/src/app/components/tutorial/tutorial.component.html
@@ -49,7 +49,10 @@
             </div>
             <div class="piece-optionnal-options-line">
                 <button mat-button [style.background-color]="'#c6c2bd'" (click)="setOptionnalPhase('gameMechanics')">{{'tutorial_optionnal_gameMechanics' | translate}}</button>
-                <button mat-button [style.background-color]="'#cfe3b9'" (click)="setOptionnalPhase('randomObjectsReward')">{{'tutorial_optionnal_randomObjectsReward' | translate}}</button>          
+                <button mat-button [style.background-color]="'#cfe3b9'" (click)="setOptionnalPhase('randomObjectsReward')">{{'tutorial_optionnal_randomObjectsReward' | translate}}</button>
+            </div>
+            <div class="piece-optionnal-options-line">
+                <button mat-button [style.background-color]="'#c4b185'" (click)="setOptionnalPhase('linkedFiles')">{{'tutorial_optionnal_linkedFiles' | translate}}</button>
             </div>
         </div>
     </div>
