--- a/src/app/sider-pieces/linked-files/linked-files.component.scss
+++ b/src/app/sider-pieces/linked-files/linked-files.component.scss
@@ -72,59 +72,63 @@
 
             margin-top: 10px;
 
-            &-file {
-
+            &-category {
                 margin-top: 10px;
 
-                &-top {
+                &-file {
 
-                    display: flex;
-                    flex-direction: row;
-
-                    &-preview {
-                        width: 50px;
-                        height: 60px;
-                        position: absolute;
-                        margin-top: 3px;
-
-                        &-icon, img, video {
+                    margin-top: 10px;
     
-                            max-width: 50px;
-                            max-height: 60px;
-                            pointer-events: none;
-                            text-align: center;
-                            margin-right: auto;
-                            margin-left: auto;
+                    &-top {
+    
+                        display: flex;
+                        flex-direction: row;
+    
+                        &-preview {
+                            width: 50px;
+                            height: 60px;
+                            position: absolute;
+                            margin-top: 3px;
+    
+                            &-icon, img, video {
         
-                            mat-icon {
-                                transform: scale(1.3);
+                                max-width: 50px;
+                                max-height: 60px;
+                                pointer-events: none;
+                                text-align: center;
+                                margin-right: auto;
+                                margin-left: auto;
+            
+                                mat-icon {
+                                    transform: scale(1.3);
+                                }
+                            }
+                        }
+        
+                        &-name {
+                            margin-left: 60px;
+        
+                            input {
+                                height: 20px;
+                                width: 150px;
+                                border-radius: 10px;
+                                border: none;
+                                padding: 5px 10px 5px 10px;
                             }
                         }
                     }
     
-                    &-name {
-                        margin-left: 60px;
+                    &-buttons {
+                        display: flex;
+                        flex-direction: row;
     
-                        input {
-                            height: 20px;
-                            width: 150px;
-                            border-radius: 10px;
-                            border: none;
-                            padding: 5px 10px 5px 10px;
-                        }
+                        width: 130px;
+                        position: relative;
+                        left: 100%;
+                        transform: translateX(-100%);
+                        justify-content: space-between;
                     }
-                }
-
-                &-buttons {
-                    display: flex;
-                    flex-direction: row;
-
-                    width: 130px;
-                    position: relative;
-                    left: 100%;
-                    transform: translateX(-100%);
-                    justify-content: space-between;
-                }
+                }   
             }            
         }
     }
