add new minimap controls (autoscroll with the highlight + dragToScroll minimap)

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -301,6 +301,7 @@
         right: 360px;
         overflow: scroll;
         transition: right 0.5s ease;
+        scrollbar-width: none;
     }
 
     &-minimap.siderFolded {
