--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -173,8 +173,8 @@
             </app-discussions>
             <app-linked-files class="container-sider-elements-element"
                 [scenario]="scenario"
-                [piece]="pieceDetailsService.pieceAsTask()"
-                *ngIf="pieceDetailsService.pieceIsTask()">
+                [piece]="pieceDetailsService.getPieceForLinkedFiles()"
+                *ngIf="pieceDetailsService.pieceIsTask() || pieceDetailsService.pieceIsRole()">
             </app-linked-files>
         </div>
         
